--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache py-pip=9.0.0-r1
-            pip install awscli==1.11.76
+            apk add --no-cache py-pip
+            pip install awscli
       - run:
           name: Build application Docker image
           command: |
