--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --no-cache py-pip
-            wget "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            wget https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip
             unzip awscliv2.zip
             sudo ./aws/install
             
