--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            apk add --no-cache py-pip
-            wget https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip
-            unzip awscliv2.zip
-            sudo ./aws/install
+            apk add --no-cache py-pip=9.0.0-r1
+            pip install awscli==1.11.76
             
       - run:
           name: Build application Docker image
