--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,5 +77,6 @@ jobs:
 
               # Deploy revision 
               aws ecs update-service --cluster "$CLUSTER" --service "$SERVICE" --task-definition "$TASK":"$revision"
+              aws ecs update-task-definition --task-definition "$TASK":"$revision"
               return 0
             fi
