--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,9 @@ jobs:
               revision=$(echo "$json" | grep -o '"revision": [0-9]*' | grep -Eo '[0-9]+')
 
               # Deploy revision 
+              aws ecs stop-task --cluster "$CLUSTER --task "$TASK":"$revision"
+              sleep 10
               aws ecs update-service --cluster "$CLUSTER" --service "$SERVICE" --task-definition "$TASK":"$revision"
-              aws ecs update-task-definition --task-definition "$TASK":"$revision"
+             
               return 0
             fi
