--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     working_directory: /app
     docker:
       - image: docker:17.05.0-ce-git
+      - image: cimg/openjdk:11.0
     steps:
       - checkout
       - setup_remote_docker
@@ -12,7 +13,7 @@ jobs:
           command: |
             apk add --no-cache py-pip=9.0.0-r1
             pip install awscli==1.11.76
-            apt install maven
+           
             
       - run:
           name: Build application Docker image
