--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ jobs:
     working_directory: /app
     docker:
       - image: docker:17.05.0-ce-git
-      - image: cimg/openjdk:11.0
     steps:
       - checkout
       - setup_remote_docker
@@ -18,7 +17,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            maven package
+            mvn package
             docker build -t app .
       # If we had
       #- run:
