--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /app
     docker:
-      - image: docker:17.05.0-ce-git
+ #     - image: docker:17.05.0-ce-git
       - image: circleci/openjdk:8-jdk
     steps:
       - checkout
