--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ jobs:
   build:
     working_directory: /app
     docker:
- #     - image: docker:17.05.0-ce-git
-      - image: circleci/openjdk:8-jdk
+      - image: docker:17.05.0-ce-git
+      
     steps:
       - checkout
       - setup_remote_docker
